networkpolicydefination.yaml
apiVersion: v1 
kind: Pod

metadata:
  name: serverpod
  labels:
    env: prod

spec:
  containers:
    - name: cont1
      image: httpd:latest 
---
apiVersion: v1 
kind: Pod

metadata:
  name: pod-client
  labels:
    app: client

spec:
  containers:
    - name: cont1
      image: nginx:latest 

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      env: prod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client
    ports:
    - protocol: TCP
      port: 80
